--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -21,14 +21,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-
-    - name: Make dir
-      run: cd ${{github.workspace}}GTest/ | mkdir build
       
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}GTest/build 
+      run: cmake -B ${{github.workspace}}/GTest/build 
 
     - name: Build
       # Build your program with the given configuration
